[project]
name = "input4mips-cvs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["esgvoc",
                "requests>=2.32.3",
                ]

[tool.uv.sources]
esgvoc = { git = "https://github.com/ESGF/esgf-vocab.git", branch = "integration" }
