[project]
authors = [
    { name = "Zebedee Nicholls", email = "zebedee.nicholls@climate-resource.com" },
    { name = "Paul Durack", email = "durack1@llnl.gov" },
]
requires-python = ">=3.9"
dependencies = [
    "packaging==24.1",
    "pandas==2.2.2",
    "pandas_diff==1.4.7",
    "pyyaml==6.0.2",
    "tqdm==4.66.4",
    "typer==0.12.3",
]
name = "input4MIPs-CVs"
version = "6.6.30"
description = """Python tooling to help with the input4MIPs-CVs repository

At the moment, intended for internal use only."""
readme = "README.md"

[project.license]
text = "BSD-3-Clause"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
