[project]
authors = [
    { name = "Zebedee Nicholls", email = "zebedee.nicholls@climate-resource.com" },
    { name = "Paul Durack", email = "durack1@llnl.gov" },
]
requires-python = ">=3.9"
dependencies = [
    "packaging==25.0",
    "pandas==2.3.1",
    "pandas_diff==1.4.7",
    "pyyaml==6.0.2",
    "requests==2.32.4",
    "tqdm==4.67.1",
    "typer==0.12.3",
]
name = "input4MIPs-CVs"
version = "6.7.7"
description = """Python tooling to help with the input4MIPs-CVs repository

At the moment, intended for internal use only."""
readme = "README.md"

[project.license]
text = "BSD-3-Clause"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
